# spxi

./: CMakeLists.txt  README.MD
docs/: FILESPEC.md  Library_Usage.md
spxi_lib/: CMakeLists.txt
spxi_lib/src/: spxi_lib.c  spxi_lib.h
tests/: read_test.c  write_test.c
